# estrategia-legal-ai

./: .env.example  .gitignore  GUIA_DEMO.md  README.md  app.py  pyproject.toml  requirements.txt
corpus/: README.md  regimen_table.yaml  rubrica_solidez.md
corpus/jurisprudencia/: _plantilla.md
corpus/normas/: _plantilla.md  cc_2341.md  cc_2347.md  cc_2354.md  cc_2356.md  ley1480_2011.md  ley1751_2015.md  ley23_1981.md  ley769_2002.md
corpus/tablas/: README.md  decreto056_2015.md
samples/: README.md
src/: __init__.py  config.py  extraction.py  pipeline.py  trace.py
src/llm/: __init__.py  client.py
src/memo/: __init__.py  builder.py  validator.py
src/rag/: __init__.py  corpus_loader.py  embeddings.py  ingest.py  retriever.py  vector_store.py
src/reasoning/: __init__.py  _common.py  analyze.py  case_framing.py  causation.py  damages.py  exoneration.py  regime.py  third_parties.py
tests/: test_analysis.py  test_app.py  test_corpus_loader.py  test_memo.py  test_pipeline.py  test_reasoning.py  test_retrieval.py  test_validator.py
tests/fixtures/corpus_demo/: _plantilla.md
tests/fixtures/corpus_demo/jurisprudencia/: demo_gamma.json
tests/fixtures/corpus_demo/normas/: demo_alpha.md  demo_beta.md
