[project]
name = "estrategia-legal-ai"
version = "0.1.0"
description = "Apoyo a la decisión defensiva en Responsabilidad Civil Extracontractual (Colombia), trazable y con corpus cerrado."
requires-python = ">=3.11"

[tool.pytest.ini_options]
# Permite `from src...` en los tests sin instalar el paquete.
pythonpath = ["."]
testpaths = ["tests"]
